--- a/_config.yml
+++ b/_config.yml
@@ -6,41 +6,43 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
+# lang: en
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Taipei
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: abb00717 # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: 很宅、喜歡和電腦打交道、總是在聽音樂、還會讓你有種「放他一個人他好像比較開心」的錯覺 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  abb00717 的個人部落格。
+  
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://abb00717.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: abb00717 # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: abb00717 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: abb00717
+  email: abb00717@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://github.com/abb00717 # change to your GitHub homepage
     # Uncomment below to add more social links
+    # - https://twitter.com/username # change to your Twitter homepage
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
@@ -98,7 +100,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: "./assets/lain_and_radiohead.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
