tagline: 唐門祖師遺訓，家訓第十

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone: Asia/Taipei
 
 title: abb00717 # the main title
 
-tagline: 很宅、喜歡和電腦打交道、總是在聽音樂、還會讓你有種「放他一個人他好像比較開心」的錯覺 # it will display as the subtitle
+tagline: 「正邪存乎一心，不在人言。仗義敢犯天下大不諱，據理可與人間爭長短，但求我輩胸懷坦蕩，寧受千夫所指，與萬人為敵，吾亦笑往矣。」 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   abb00717 的個人部落格。
