--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: G-R58Q122YCM # fill in your Google verification code
+  google: # G-R58Q122YCM # fill in your Google verification code
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
